--- a/koldun/Cargo.toml
+++ b/koldun/Cargo.toml
@@ -47,13 +47,22 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
-fixed = "1.23.1"
+fixed = "1.24.0"
 fixed-macro = "1.2"
+embedded-graphics = "0.8.0"
+heapless = "0.7.16"
+tinytga = "0.5.0"
+
+[dependencies.display-interface]
+git = "https://github.com/chrismoos/display-interface"
+branch = "rw-interface"
+
 
 [patch.crates-io]
 embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b" }
 embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b" }
 embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b" }
+# display-interface = { git = "https://github.com/chrismoos/display-interface", branch = "rw-interface" }
 
 [profile.dev]
 debug = 2
