--- a/koldun/Cargo.toml
+++ b/koldun/Cargo.toml
@@ -49,9 +49,10 @@ defmt = "0.3"
 defmt-rtt = "0.4"
 fixed = "1.24.0"
 fixed-macro = "1.2"
-embedded-graphics = "0.8.0"
+embedded-graphics = "0.8.1"
 heapless = "0.7.16"
 tinytga = "0.5.0"
+u8g2-fonts = "0.3.0"
 
 [dependencies.display-interface]
 git = "https://github.com/chrismoos/display-interface"
