--- a/koldun/Cargo.toml
+++ b/koldun/Cargo.toml
@@ -53,6 +53,7 @@ embedded-graphics = "0.8.1"
 heapless = "0.7.16"
 tinytga = "0.5.0"
 u8g2-fonts = "0.3.0"
+embedded-alloc = "0.5.0"
 
 [dependencies.display-interface]
 git = "https://github.com/chrismoos/display-interface"
