--- a/koldun/Cargo.toml
+++ b/koldun/Cargo.toml
@@ -54,6 +54,7 @@ heapless = "0.7.16"
 tinytga = "0.5.0"
 u8g2-fonts = "0.3.0"
 embedded-alloc = "0.5.0"
+async-trait = "0.1.73"
 
 [dependencies.display-interface]
 git = "https://github.com/chrismoos/display-interface"
