--- a/koldun/Cargo.toml
+++ b/koldun/Cargo.toml
@@ -56,6 +56,8 @@ u8g2-fonts = "0.3.0"
 embedded-alloc = "0.5.0"
 async-trait = "0.1.73"
 
+koldun_macro_derive = { path = "../koldun_macro_derive" }
+
 [dependencies.display-interface]
 git = "https://github.com/chrismoos/display-interface"
 branch = "rw-interface"
