--- a/koldun/Cargo.toml
+++ b/koldun/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hashbrown = { version = "0.14.2" }
+
 embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
 embassy-sync = { version = "0.3.0", features = ["defmt"] }
 embassy-executor = { version = "0.3.0", features = [
@@ -44,7 +46,6 @@ pio-proc = "0.2"
 pio = "0.2.1"
 rand = { version = "0.8.5", default-features = false }
 panic-probe = { version = "0.3", features = ["print-defmt"] }
-
 defmt = "0.3"
 defmt-rtt = "0.4"
 fixed = "1.24.0"
@@ -55,7 +56,6 @@ tinytga = "0.5.0"
 u8g2-fonts = "0.3.0"
 embedded-alloc = "0.5.0"
 async-trait = "0.1.73"
-
 koldun_macro_derive = { path = "../koldun_macro_derive" }
 
 [dependencies.display-interface]
