--- a/koldun/Cargo.toml
+++ b/koldun/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# hashbrown = { version = "0.14.2" }
+hashbrown = { version = "0.14.2" }
 embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
 embassy-sync = { version = "0.3.0", features = ["defmt"] }
 embassy-executor = { version = "0.3.0", features = [
